--- a/learning/src/main/webapp/index.html
+++ b/learning/src/main/webapp/index.html
@@ -1,5 +1,12 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="pt-br">
+<head>
+	<meta charset="UTF-8"/>
+	<title>Clube do Codigo</title>
+	
+	<script type="text/javascript" src="/js/angular.1.0.7.min.js"></script>
+</head>
 <body>
-<h2>Hello World!</h2>
+	<h2>Clube do Codigo: Angular e Bootstrap!</h2>
 </body>
 </html>
